Actualize la version 1

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Omar Castañeda <span>Freelancer</span></h1>
+        <h1 class="titulo">Alicia Yachi <span>Freelancer</span></h1>
     </header>
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
             <a href="#">Inicio</a>
-            <a href="#">Sobre Mi</a>
-            <a href="#">Clientes</a>
-            <a href="#">Contacto</a>
+            <a href="#">About Me</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact Us</a>
         </nav>
     </div>
     
