--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="#">About Me</a>
             <a href="#">Clients</a>
             <a href="#">Contact Us</a>
+            <a href="#">Customer service</a>
         </nav>
     </div>
     
