--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
-            <a href="#">Inicio</a>
+            <a href="#">Start</a>
             <a href="#">About Me</a>
             <a href="#">Clients</a>
             <a href="#">Contact Us</a>
